<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

 	<TextView 
 	    android:id="@+id/label" 
 	    android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:text="@string/Golf" />
 	
 	<ImageView
 	    android:id="@+id/Flag"
 	    android:layout_width="wrap_content"
 	    android:layout_height="100dp"
 	    android:layout_below="@id/label"
 	    android:layout_centerInParent="true"
 	    android:contentDescription="@string/desc"
 	    android:gravity="center_vertical|center_horizontal"
 	    android:src="@drawable/icon" />
 	<Button
 	    android:id="@+id/List"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_centerInParent="true"
 	    android:layout_below="@id/Flag"
 	    android:onClick="ListView"
 	    android:text="@string/List"/>
</RelativeLayout>